# MiniFramework

./: LICENSE  README.md  main.py  sumatoria.yaml
Minifrwk/: pyproject.toml
Minifrwk/src/minifrwk/: __init__.py  cli.py  core.py  data_reader.py  orchestrator.py  sample.py
Minifrwk/src/minifrwk/algorithms/: __init__.py  base.py  mean_dummy.py
Minifrwk/src/minifrwk/config_loader/: loader.py
Minifrwk/src/minifrwk/data/: tabla.csv
Minifrwk/src/minifrwk/numeric_ops/: __init__.py  resta.py  suma.py
Minifrwk/src/minifrwk/text_ops/: __init__.py  ops.py
plugins/numeric_plugin/: pyproject.toml
plugins/numeric_plugin/src/numeric_plugin/: core.py
plugins/text_plugin/: pyproject.toml
plugins/text_plugin/src/text_plugin/: reverse.py
tests/: test_entrypoints.py
